syntax = "proto3";

import "google/protobuf/empty.proto";
package profiles;
option go_package = "idea-store.profiles.v1;profilesv1";

service Profiles{
    rpc CreateProfile(CreateProfileRequest) returns (google.protobuf.Empty) {}
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (google.protobuf.Empty) {}
    rpc GetProfileLight(GetProfileLightRequest) returns (GetProfileLightResponse);
    //ToggleSaveIdea saves the idea to the board if not saved and removes it otherwise
    rpc ToggleSaveIdea(ToggleSaveRequest) returns (ToggleSaveResponse);
    rpc ToggleLikeIdea(ToggleLikeIdeaRequest) returns (ToggleLikeIdeaResponse);
    rpc IsIdeaSaved(IsIdeaSavedRequest) returns (IsIdeaSavedResponse);
    rpc IsIdeaLiked(IsIdeaLikedRequest) returns (IsIdeaLikedResponse);
    rpc GetSavedIdeas(GetSavedIdeasRequest) returns (GetSavedIdeasResponse);
    rpc GetSavedIdeasIds(GetSavedIdeasIdsRequest) returns (GetSavedIdeasIdsResponse);
    rpc MoveIdeasToBoard(MoveIdeaToBoardRequest) returns (google.protobuf.Empty) {}
    rpc AddBoardToProfile(AddBoardToProfileRequest) returns (google.protobuf.Empty) {}
    rpc RemoveBoardFromProfile(RemoveBoardFromProfileRequest) returns (google.protobuf.Empty) {}
    rpc GetProfilesFromSearch(GetProfilesFromSearchRequest) returns (GetProfilesFromSearchResponse);
}
message IsIdeaLikedRequest{
    int64 user_id = 1;
    int64 idea_id = 2;
}
message IsIdeaLikedResponse{
    bool liked=1;
}
message ToggleLikeIdeaRequest{
    int64 user_id = 1;
    int64 idea_id = 2;
}
message ToggleLikeIdeaResponse{
    bool now_liked=1;
    int64 likes_count=2;
}
message UpdateProfileRequest{
    int64 user_id = 1;
    string name = 2;
    string avatar = 3;
    string description = 4;
    string link = 5;
}
message AddBoardToProfileRequest{
    int64 user_id = 1;
    int64 board_id=2;
}
message RemoveBoardFromProfileRequest{
    int64 user_id = 1;
    int64 board_id=2;
}
message MoveIdeaToBoardRequest{
    int64 user_id = 1;
    int64 old_board_id = 2;
    int64 new_board_id = 3;
}
message GetSavedIdeasIdsRequest{
    int64 user_id = 1;
}
message GetSavedIdeasIdsResponse{
    repeated int64 ideas_ids = 1;
}
message ToggleSaveRequest{
  int64 user_id = 1;
  int64 idea_id = 2;
  int64 board_id = 3;
}
message ToggleSaveResponse{
  bool now_saved = 1;
}
message CreateProfileRequest{
    int64 id = 1;
    string email = 2;
    string name = 3;
}
message ProfileData{
    int64 id = 1;
    string email = 2;
    string avatarImage = 3;
    string name = 4;
    string description = 5;
    string link = 6;
    repeated int64 boards = 7;
    repeated IdeaBoardPair saved_ideas = 8;
}
message GetProfileRequest{
    int64 id = 1;
}
message GetProfileResponse{
    ProfileData data = 1;
}
message IsIdeaSavedRequest{
    int64 user_id=1;
    int64 idea_id=2;
}
message IsIdeaSavedResponse{
    bool saved=1;
    int64 board_id = 2;
}

message GetSavedIdeasRequest{
    int64 user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetSavedIdeasResponse{
    repeated IdeaData ideas = 1;
}

message IdeaData {
  int64 id = 1;
  string name = 2;
  string image = 3;
  int64 board_id = 4;
}
message IdeaBoardPair{
    int64 idea_id = 1;
    int64 board_id = 2;
}

message GetProfileLightRequest{
    int64 user_id = 1;
}

message GetProfileLightResponse{
    string name = 1;
    string avatar = 2;
}

message GetProfilesFromSearchRequest{
    string input = 1;
}
message GetProfilesFromSearchResponse{
    repeated ProfileDataLight profiles = 1;
}
message ProfileDataLight{
    int64 id = 1;
    string name = 2;
    string avatar = 3;
}